--- a/configs/mx6amherstsolo_defconfig
+++ b/configs/mx6amherstsolo_defconfig
@@ -1,7 +1,3 @@
-CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=board/freescale/mx6amherstsolo/imximage.cfg,MX6DL,SYS_NOSMP="nosmp""
+CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=board/freescale/mx6amherstsolo/imximage.cfg,MX6DL"
 CONFIG_ARM=y
 CONFIG_TARGET_MX6AMHERSTSOLO=y
-CONFIG_SYS_MALLOC_F=y
-CONFIG_SYS_MALLOC_F_LEN=0x400
-CONFIG_DM=y
-CONFIG_DM_THERMAL=y
