--- a/configs/mx6amherstsolo_defconfig
+++ b/configs/mx6amherstsolo_defconfig
@@ -1,3 +1,3 @@
-CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=board/freescale/mx6amherstsolo/imximage.cfg,MX6DL"
+CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=board/freescale/mx6amherstsolo/imximage.cfg,MX6Q"
 CONFIG_ARM=y
 CONFIG_TARGET_MX6AMHERSTSOLO=y
